@@ -1,6 +1,5 @@
-package fundamentals.builders;
+package org.example;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.bson.Document;
@@ -14,24 +13,26 @@ import com.mongodb.client.model.Aggregates;
 import com.mongodb.client.model.Filters;
 import com.mongodb.client.model.Projections;
 import com.mongodb.client.model.search.SearchOperator;
-import com.mongodb.client.model.search.SearchPath;
+
+import static com.mongodb.client.model.search.SearchPath.fieldPath;
+
 public class AggregateSearchBuilderExample {
 
-    private static final String CONNECTION_URI = "<connection URI>";
+    private static final String CONNECTION_URI = "<connection uri>";
 
     // Match aggregation
     private static void runMatch(MongoCollection<Document> collection) {
         Bson matchStage = Aggregates.match(Filters.eq("title", "Future"));
         Bson projection = Aggregates.project(Projections.fields(Projections.include("title", "released")));
 
-        List<Bson> aggregateStages = Arrays.asList(matchStage, projection);
+        List<Bson> aggregateStages = List.of(matchStage, projection);
         System.out.println("aggregateStages: " + aggregateStages);
         collection.aggregate(
                 aggregateStages
-                ).forEach(result -> System.out.println(result));
+        ).forEach(result -> System.out.println(result));
     }
 
-    /* 
+    /*
      * Atlas text search aggregation
      * Requires Atlas cluster and full text search index
      * See https://www.mongodb.com/docs/atlas/atlas-search/tutorial/ for more info on requirements
@@ -40,13 +41,37 @@ public class AggregateSearchBuilderExample {
         // begin atlasTextSearch
         Bson textSearch = Aggregates.search(
                 SearchOperator.text(
-                        SearchPath.fieldPath("title"), "Future"));
+                        fieldPath("title"), "Future"));
         // end atlasTextSearch
 
         // To condense result data, add this projection into the pipeline
         // Bson projection = Aggregates.project(Projections.fields(Projections.include("title", "released")));
 
-        List<Bson> aggregateStages = Arrays.asList(textSearch);
+        List<Bson> aggregateStages = List.of(textSearch);
+        System.out.println("aggregateStages: " + aggregateStages);
+
+        System.out.println("explain:\n" + collection.aggregate(aggregateStages).explain());
+        collection.aggregate(aggregateStages).forEach(result -> System.out.println(result));
+    }
+
+    /*
+     * Atlas search aggregation
+     * Requires Atlas cluster and full text search index
+     * See https://www.mongodb.com/docs/atlas/atlas-search/tutorial/ for more info on requirements
+     */
+    private static void runAtlasSearch(MongoCollection<Document> collection) {
+        // begin atlasSearch
+        Bson search_stage = Aggregates.search(
+                SearchOperator.compound()
+                        .filter(List.of(SearchOperator.text(fieldPath("genres"), "Drama")))
+                        .must(List.of(SearchOperator.phrase(fieldPath("cast"), "keanu reeves")))
+        );
+        // end atlasSearch
+
+        // To condense result data, add this projection into the pipeline
+        // Bson projection = Aggregates.project(Projections.fields(Projections.include("title", "released")));
+
+        List<Bson> aggregateStages = List.of(search_stage);
         System.out.println("aggregateStages: " + aggregateStages);
 
         System.out.println("explain:\n" + collection.aggregate(aggregateStages).explain());
@@ -55,19 +80,19 @@ public class AggregateSearchBuilderExample {
 
     private static void runAtlasTextSearchMeta(MongoCollection<Document> collection) {
         Bson textSearchMeta =
-        // begin atlasSearchMeta
-        Aggregates.searchMeta(
-                SearchOperator.near(2010, 1, SearchPath.fieldPath("year")));
+                // begin atlasSearchMeta
+                Aggregates.searchMeta(
+                        SearchOperator.near(2010, 1, fieldPath("year")));
         // end atlasSearchMeta
 
-        List<Bson> aggregateStages = Arrays.asList(textSearchMeta);
+        List<Bson> aggregateStages = List.of(textSearchMeta);
         System.out.println("aggregateStages: " + aggregateStages);
 
         collection.aggregate(aggregateStages).forEach(result -> System.out.println(result));
     }
 
     public static void main(String[] args) {
-        String uri = CONNECTION_URI; 
+        String uri = CONNECTION_URI;
 
         try (MongoClient mongoClient = MongoClients.create(uri)) {
             MongoDatabase database = mongoClient.getDatabase("sample_mflix");
@@ -77,7 +102,8 @@ public class AggregateSearchBuilderExample {
             // Uncomment the methods that correspond to what you're testing
             // runMatch(collection);
             // runAtlasTextSearch(collection);
-            runAtlasTextSearchMeta(collection);
+            runAtlasSearch(collection);
+            // runAtlasTextSearchMeta(collection);
         }
     }
 }
